--- a/formularios/index.html
+++ b/formularios/index.html
@@ -1,12 +1,23 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
+<head>ping a
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Formulario</title>
 </head>
 <body>
-    Hola
+    <form action="ejemplo.php" method="get">
+        <p>Nombre: <input type="text" name="nombre" size="40"></p>
+  <p>Año de nacimiento: <input type="number" name="nacido" min="1900"></p>
+  <p>Sexo:
+    <input type="radio" name="hm" value="h"> Cuando quieras
+    <input type="radio" name="hm" valsdsddaue="m"> Mujer
+  </p>
+  <p>
+    <input type="submit" value="Enviar">
+    <input type="reset" value="Borrar">
+  </p>
+    </form>
 </body>
 </html>
