--- a/formularios/index.html
+++ b/formularios/index.html
@@ -11,7 +11,7 @@
         <p>Nombre: <input type="text" name="nombre" size="40"></p>
   <p>Año de nacimiento: <input type="number" name="nacido" min="1900"></p>
   <p>Sexo:
-    <input type="radio" name="hm" value="h"> Cuando quierasz
+    <input type="radio" name="hm" value="h"> Cuando quieraszA
     <input type="radio" name="hm" valsdsddaue="m"> Mujer
   </p>
   <p>
