--- a/formularios/index.html
+++ b/formularios/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>ping a
+<head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,7 +11,7 @@
         <p>Nombre: <input type="text" name="nombre" size="40"></p>
   <p>Año de nacimiento: <input type="number" name="nacido" min="1900"></p>
   <p>Sexo:
-    <input type="radio" name="hm" value="h"> Cuando quieraszA
+    <input type="radio" name="hm" value="h"> Hombre
     <input type="radio" name="hm" valsdsddaue="m"> Mujer
   </p>
   <p>
