--- a/formularios/index2.html
+++ b/formularios/index2.html
@@ -8,10 +8,10 @@
 </head>
 <body>
     <h1>Regístrate</h1>
-  <form action="procesar.hp" method="get">
-    Correo electrónico: <input type="text" name="Correo electrónico" size="45"</p>
-    <p>Contraseña <input type="text" name="Contraseña" size="45"</p>
-    <p>Repite la contraseña <input type="text" name="Repite la contraseña" size="45"
-    
+<form action="procesar.hp" method="get">
+  <p>Correo electrónico: <input type="text" name="Correo electrónico" size="45" </p>
+  <p>Contraseña <input type="text" name="Contraseña" size="45" </p>
+  <p>Repite la contraseña <input type="text" name="Repite la contraseña" size="45" </p>
+
 </body>
 </html>
