--- a/programacion primeros pasos/index.html
+++ b/programacion primeros pasos/index.html
@@ -7,6 +7,6 @@
     <title>Programación primeros pasos</title>
 </head>
 <body>
-    <h1> Mi primera página con javascript</h1>
+    <h1> Mi primera página con JavaScript</h1>
 </body>
 </html>
