--- a/formularios/index.html
+++ b/formularios/index.html
@@ -15,7 +15,7 @@
         </p>
         <p>Contraseña: <input type="text" name="contraseña" size="40" placeholder="enter 8 characters or more"></p>
         <p>Repetir contraseña: <input type="text" name="repetir contraseña" size="40"
-                placeholder="repite tu contraseña"></p>
+                placeholder="repita su contraseña"></p>
         <p>
             <input type="submit" value="Regístrate">
 
