--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <h1>Ejercicios clase 2ª evaluación</h1>
     
     <ul>
-      <li>Ejercicio de formularios <a href="formularios/index.html" target="_blank"> Formulario registro webhost000 </a> </li> 
+      <li>Ejercicio de formularios <a href="formularios/index.html" target="_blank"> Formulario registro</a> </li> 
         
     </ul>
 
